--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "og:build": "ts-node scripts/generate-og.tsx"
   },
   "dependencies": {
     "framer-motion": "^11.12.0",
@@ -20,10 +21,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/node": "^22.10.5",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.17.1",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -34,7 +36,9 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "prettier": "3.4.1",
+    "satori": "^0.16.2",
     "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
