--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "og:build": "ts-node scripts/generate-og.tsx"
+    "og:build": "tsx scripts/generate-og.tsx"
   },
   "dependencies": {
     "framer-motion": "^11.12.0",
@@ -39,6 +39,7 @@
     "satori": "^0.16.2",
     "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
